Correction de l'intro

--- a/piot2012cascading/main.org
+++ b/piot2012cascading/main.org
@@ -172,17 +172,17 @@ The IRL problem, that is dicovering the reward function optimized by an expert i
 This reward function is seen as the most succinct description of the task, allowing for task transfer from the expert to an agent with potentially different abilities. 
 #+end_comment
 
-Given a sequential decision making problem framed in the Markov Decision Process (MDP) formalism, it is often difficult to manually specify a reward function in order to train an agent to fulfill a given task. However, observing an expert demonstrating this task is often possible and easier \cite{ng2000algorithms}. That is why learning from demonstrations and more particularly Inverse Reinforcement Learning (IRL) has received more and more interest this last decade. The IRL framework, first introduced in \cite{russell1998learning,ng2000algorithms}, assumes that an expert, demonstrating a task, is acting optimally in an MDP with respect to an unknown reward function to be discovered. Unlike direct methods of apprenticeship learning[fn:: The definition of apprenticeship learning we use is a restriction of learning from demonstration to MDP settings, where the output of the algorithm is a control policy.] which learn a mapping from states to actions via supervised learning (SL) \cite{atkeson1997robot,pomerleau1989alvinn}, IRL methods aim at recovering a reward function. We see this reward function as the most compact and transferable way to specify a task. One can even try to derive semantic information from it, for example in biological or economical studies \cite{russell1998learning}.
+Given a sequential decision making problem framed in the Markov Decision Process (MDP) formalism, it is often difficult to manually specify a reward function in order to train an agent to fulfill a certain task. However, observing an expert demonstrating this task is often possible and easier \cite{russell1998learning}. That is why learning from demonstrations and more particularly Inverse Reinforcement Learning (IRL) has received more and more interest this last decade. The IRL framework, first introduced in \cite{russell1998learning,ng2000algorithms}, assumes that an expert, demonstrating a task, is acting optimally in an MDP with respect to an unknown reward function to be discovered. Unlike direct methods of apprenticeship learning[fn:: The definition of apprenticeship learning we use is a restriction of learning from demonstration to MDP settings, where the output of the algorithm is a control policy.] which learn a mapping from states to actions via supervised learning (SL) \cite{atkeson1997robot,pomerleau1989alvinn}, IRL methods aim at recovering a reward function. We see this reward function as the most compact and transferable way to specify a task. One can even try to derive semantic information from it, for example in biological or economical studies as hinted to in \cite{russell1998learning}.
 Most of the direct methods do not use the structure of the MDP (one notable exception being \cite{melo2010learning}), hence only mimic the policy of the expert and are not able to generalize it correctly, possibly leading to incorrect behavior outside demonstrated states.
-In order to overcome this drawback, undirect methods using the IRL framework \cite{abbeel2004apprenticeship} were introduced. Most of these methods (see \cite{neu2009training} for a comprehensive overview) assume the dynamic of the environment known, or need an environment model (via a simulator) so as to test the effects of a policy. Moreover, most of existing undirect approaches require to solve the forward Reinforcement Learning (RL) problem (find an optimal policy knowing a given reward) several times (except  \cite{boularias2011relative}).
-Finally, in many cases, the output of the algorithm is a policy but not a reward function (see Section \ref{section: related work} for an in-depth presentation). These constraints can lead to difficulties in real-world applications and make the problem of apprenticeship learning harder than the forward RL problem. That is why a reborn interest for direct methods which passively imitate the expert exists. More particularly the reduction of the apprenticeship learning to classification, first introduced 
+In order to overcome this drawback, undirect methods using the IRL framework \cite{abbeel2004apprenticeship} were introduced. Most of these methods (see \cite{neu2009training} for a comprehensive overview) assume the dynamic of the environment known, or need an environment model (via a simulator) so as to test the effects of a policy. Moreover, most of existing undirect approaches require to solve the forward Reinforcement Learning (RL) problem (find an optimal policy knowing a given reward) several times (except  \cite{boularias2011relative} which however requires sampling non expert trajectories).
+Finally, in many cases, the output of the algorithm is a policy but not a reward function (see Section \ref{section: related work} for an in-depth presentation). These constraints can even lead to difficulties in real-world applications and make the problem of apprenticeship learning harder than the forward RL problem. That is why a reborn interest for direct methods which passively imitate the expert exists. More particularly the reduction of the apprenticeship learning to classification, first introduced 
 #VERIFIER CETTE REF
 in \cite{zadrozny2003cost}
 and recently used 
 #Est-ce qu'on rajoute ratliff ?
 in \cite{melo2010learning}, is legitimated for finite horizons problems in \cite{syed2010reduction},\cite{ross2010efficient}.
 Our approach tries to avoid the drawbacks of both direct and undirect methods by cascading two well-known supervised learning methods (see Section \ref{section: Cascading}): first a step of classification from data drawn by the expert provides us with a score function over the state-action space (i.e. for each state we are provided with a ranking of the actions), then a step of regression introduces the MDP structure and outputs a reward function.
-Our approach doesn't require any of the following: complete trajectories from an expert, a generative model of the environment, the knowledge of the transition probabilities, the ability to compute a (near)-optimal policy for different rewards and hence solve the forward (RL) problem or even the perfect knowledge of the expert's policy. Our analysis (Section \ref{section: Analysis}) show that the expert is epsilon-optimal with respect to the resulting reward function. Moreover, our algorithm can be instanciated with any off-the-shelf score-function based classifier and any regression method. We provide such an instanciation and empirically show (Section \ref{section: experiments}) that only a small amount of expert demonstrations (not even in the form of trajectories but simple transitions) is required. Comparison to other state of the art methods is provided Section \ref{section: related work}.
+Our approach doesn't require any of the following: complete trajectories from an expert, a generative model of the environment, the knowledge of the transition probabilities, the ability to compute a (near)-optimal policy for different rewards and hence solve the forward (RL) problem or even the perfect knowledge of the expert's policy. Also, we exhibit a reward function and not a control policy. Our analysis (Section \ref{section: Analysis}) show that the expert is epsilon-optimal with respect to the resulting reward function. Moreover, our algorithm can be instanciated with any off-the-shelf score-function based classifier and any regression method. We provide such an instanciation and empirically show (Section \ref{section: experiments}) that only a small amount of expert demonstrations (not even in the form of trajectories but simple transitions) is required. Comparison to other state-of-the-art methods is provided Section \ref{section: related work}. We start with somebackground mathematical notations in Section \ref{section: background}.
 
 * Background and notations
   \label{section: background}
@@ -425,7 +425,7 @@ Finally by regrouping the results in \eqref{equation: cas3-1} and \eqref{equatio
 
   \begin{figure}[!Ht]
   \begin{tabular}{ccc}
-  \subfigure[State of the art approaches on the GridWorld]{\includegraphics[width=.45\linewidth]{"Fig1"}\label{Fig1.fig}}&\hspace{.05\linewidth}&
+  \subfigure[State-of-the-art approaches on the GridWorld]{\includegraphics[width=.45\linewidth]{"Fig1"}\label{Fig1.fig}}&\hspace{.05\linewidth}&
   \subfigure[Our new approach on the GridWorld]{\includegraphics[width=.45\linewidth]{"Fig2"}\label{Fig2.fig}}\\
   \subfigure[Results on the dsriving simulator]{\includegraphics[width=.4\linewidth]{"Fig3"}\label{Fig3.fig}}&\hspace{.05\linewidth}&\includegraphics[width=0.45\linewidth]{"Legend"}
   \end{tabular}
@@ -454,7 +454,7 @@ Finally, we have $\hat R^C(s,a) = \theta^t \phi(s,a)$.
 #+begin_comment
    - [X] Desc of problems
    - [X] Results
-   - [X] Better than state of the art
+   - [X] Better than state-of-the-art
 #+end_comment
    We first tested our approach on a simple $5\times 5$ gridworld. The expert and the agent can choose between 4 actions (down, left right, or up) that sends the player in the corresponding neighbooring cell with probabilty $0.7$. Three times out of ten however, the actions fails and the player moves in another different random direction. Trying to go off the grid will result in the player staying in its position. The expert begins in the lower left corner and is trained to go to the higher right corner by an exact dynamic programming algorithm. The original reward (with respect to which the performance of the agents is computed) is null everywhere but in the higher right corner where it is $1$ for all actions.
 
@@ -470,7 +470,7 @@ To illustrate a more challenging problem with an increased state space size, we 
 
 We used features stemming from a discretization of the state-action space. The performance is assessed with respect to the uniform distribution $\mathcal{U}$, which shows the generalization ability of each method).
 
-As expected, pure classification is not sample efficient enough to provide a good control whereas our approach is able to generalize from very little data and exhibits performance on par with the /fully-informed/ state of the art algorithm when given as few as 100 samples. This empirically shows that the usefulness of the regression step. Furthermore, the state of the art algorihtm make use of intermediate policies, which is computationally costly particularily when the state space gets big. Our approach computational cost scales with the number of samples we are given, which is as we demonstrated a small number. Experimentally, when producing the data for our graph, it took less time to run the cascading approach 50 times for 6 abcissa than to run \cite{abbeel2004apprenticeship}'s algorithm once.
+As expected, pure classification is not sample efficient enough to provide a good control whereas our approach is able to generalize from very little data and exhibits performance on par with the /fully-informed/ state-of-the-art algorithm when given as few as 100 samples. This empirically shows that the usefulness of the regression step. Furthermore, the state-of-the-art algorihtm make use of intermediate policies, which is computationally costly particularily when the state space gets big. Our approach computational cost scales with the number of samples we are given, which is as we demonstrated a small number. Experimentally, when producing the data for our graph, it took less time to run the cascading approach 50 times for 6 abcissa than to run \cite{abbeel2004apprenticeship}'s algorithm once.
 
 * Related work
 \label{section: related work}
@@ -484,7 +484,7 @@ Classification and IRL have met in the past in \cite{ratliff2006maximum}, but th
 
 * Conclusion
   
-  The proposed approach of cascading two supervised learning algorithms (a classifier and a regressor) is able to learn a reward function from observed behavior for which the expert is provably near optimal. Going further than the analysis, experiments showed the approach (with the help of a simple heuristics) to be sample efficient enough to work with samples from the expert only, giving better results and being more computationnaly efficient than a state of the art algorithm. Our approach will be confronted to real world robotics problems in a near future.
+  The proposed approach of cascading two supervised learning algorithms (a classifier and a regressor) is able to learn a reward function from observed behavior for which the expert is provably near optimal. Going further than the analysis, experiments showed the approach (with the help of a simple heuristics) to be sample efficient enough to work with samples from the expert only, giving better results and being more computationnaly efficient than a state-of-the-art algorithm. Our approach will be confronted to real world robotics problems in a near future.
 
 \bibliographystyle{plain}
 \bibliography{Biblio}
