Corrections de Background et notations

--- a/piot2012cascading/main.org
+++ b/piot2012cascading/main.org
@@ -191,14 +191,14 @@ $\Delta_X$ is the set of probability distributions over $X$. Let $\mu\in\Delta_X
 \begin{equation}
 \|f\|_{\mu,1}=\sum_{x\in X}\mu(x)|f(x)|=E_{x\sim\mu}[|f(x)|]=\mu^T|f|,
 \end{equation}
-where the notation $E_{x\sim\mu}$ is the expectation with $x$ distributed according to $\mu$.
+where the notation $E_{x\sim\mu}$ is the expectation with $x$ drawn according to $\mu$.
 
-Now, we introduce specific notations to the MDP paradigm. A (finite) MDP \cite{puterman1994markov} is a tuple $M=\{S,A,P,\gamma,R\}$ where $S=\{s_i\}_{1\leq i \leq N}$ is the finite state space with $N\in\mathbb{N}^*$ states, $A=\{a_k\}_{1\leq k \leq K}$ is the finite action space with $K\in\mathbb{N}^*$ actions, $P=\{P_{s,a}\}_{(s,a)\in S\times A}$ is the set of transition probabilities where $P_{s,a}$ is a distribution probability over $S$. $P$ represents the dynamics of the MDP and the notation $p(s,a,s')=P_{s,a}(s')$ quantifies the probability to reach $s'\in S$ knowing that the action $a \in A$ was taken in the state $s\in S$, $\gamma\in]0,1[$ is the discount factor and $R$ is a function from $S\times A$ to $\mathbb{R}$ called the reward function. A deterministic policy $\pi$ is a function from $S$ to $A$, the value function $V^\pi_R$ is a function from $S$ to $\mathbb{R}$ defined by:
+Now, we introduce notations specific to the MDP paradigm. A (finite) MDP \cite{puterman1994markov} is a tuple $M=\{S,A,P,\gamma,R\}$ where $S=\{s_i\}_{1\leq i \leq N}$ is the finite state space with $N\in\mathbb{N}^*$ states, $A=\{a_k\}_{1\leq k \leq K}$ is the finite action space with $K\in\mathbb{N}^*$ actions, $P=\{P_{s,a}\}_{(s,a)\in S\times A}$ is the set of transition probabilities where $P_{s,a}$ is a distribution probability over $S$. $P$ represents the dynamics of the MDP and the notation $p(s,a,s')=P_{s,a}(s')$ quantifies the probability to reach $s'\in S$ knowing that the action $a \in A$ was taken in the state $s\in S$, $\gamma\in]0,1[$ is the discount factor and $R$ is a function from $S\times A$ to $\mathbb{R}$ called the reward function. A deterministic policy $\pi$ is a function from $S$ to $A$, the value function $V^\pi_R$ is a function from $S$ to $\mathbb{R}$ defined by:
 \begin{equation}
 V^\pi_R(s)=E^\pi_s[\sum_{t=0}^{+\infty}\gamma^tR(s_t,\pi(s_t))], \forall s \in S,
 \end{equation}
 where $E^\pi_s$ is the expectation over the distribution of the trajectories $(s_0,s_1,\dots)$ obtained by executing the policy $\pi$ starting from $s_0=s$.
-The action-value function $Q^\pi_R$ is a function from $S\times A$ to $R$ defined by: $\forall s\in S, \forall a\in A$, $Q^{\pi}_R(s,a)=R(s,a)+\gamma\sum_{s'\in S}P_{s,a}(s')V^{\pi}_R(s')$. The classical result for finite MDPs is the well-known Bellman equation \cite{sutton1998reinforcement}:$\forall s\in S$, $V^{\pi}_R(s)~=~R(s,\pi(s))~+~\gamma\sum_{s'\in S}P_{s,\pi(s)}(s')V^{\pi}_R(s')$.
+The action-value function $Q^\pi_R$ is a function from $S\times A$ to $R$ defined by: $\forall s\in S, \forall a\in A$, $Q^{\pi}_R(s,a)=R(s,a)+\gamma\sum_{s'\in S}P_{s,a}(s')V^{\pi}_R(s')$. The classical result for finite MDPs is the well-known Bellman equation: $\forall s\in S$, $V^{\pi}_R(s)~=~R(s,\pi(s))~+~\gamma\sum_{s'\in S}P_{s,\pi(s)}(s')V^{\pi}_R(s')$.
 A policy $\pi$ is said optimal for the reward $R$ when:
 $\forall s\in S, \forall \tilde{\pi}\in A^{S}, V^{\pi}_R(s)\geq V^{\tilde{\pi}}_R(s)$.
 Another classical result called the Bellman optimality is: $\pi$ is an optimal policy for the reward $R$ if and only if:
@@ -213,11 +213,11 @@ For a given policy $\pi$ and a given reward function $R$, we define $R_\pi=[R_\p
 It is well known that the unique fixed point of the operator $T^\pi_R$ is  $V^\pi_R$ \cite{puterman1994markov}.\\
 RL consists in finding an optimal policy for the reward function $R$. Notice that the state space may be too large for an exact representation of the value function (which calls for approximate
 representation), that the model ($P$ and $R$) may be unknown (the only information being provided through rewarded transitions sampled according
-to some behavioral policy), that learning can occurs in an online or off-line setting, and so on. There exists books on the subject \cite{bertsekas2001dynamic},\cite{sutton1998reinforcement}.
+to some behavioral policy), that learning can occur in an online or off-line setting, and so on. See \cite{bertsekas2001dynamic},\cite{sutton1998reinforcement} for details.
 
 In the classical IRL paradigm \cite{ng2000algorithms}, an MDP without reward $M\backslash R =\{S,A,P,\gamma\}$ and a policy $\pi_E$ called expert-policy are given and the problem is to find
-a reward $R^*$ for which the policy $\pi_E$ is optimal. However this problem is clearly ill-posed in the sense that there is not uniqueness of the reward $R^*$ : many rewards functions are equivalent in the sense that they have the same optimal deterministic policies, moreover the trivial zero-reward is a solution for any deterministic policy $\pi_E$ as it is shown in \cite{ng2000algorithms}. In the literature, some solutions are proposed in order to respond to the ill-posed nature of the problem \cite{ng2000algorithms,ziebart2008maximum,boularias2011relative}.
-In our experiments, see Section \ref{section: experiments}, we assume that the solely available information is provided by transitions sampled according to the dynamics of the environnement under $\pi_E$: $\{(s_i,a_i=\pi_E(s_i)),s_i')\}_{1\leq i \leq D}, D\in\mathbb{N}^*$,
+a reward $R^*$ for which the policy $\pi_E$ is optimal. However this problem is clearly ill-posed in the sense that there is not uniqueness of the reward $R^*$: many reward functions are equivalent in that they have the same optimal deterministic policies, moreover the trivial zero-reward is a solution for any deterministic policy $\pi_E$ as it is shown in \cite{ng2000algorithms}. In the literature, some solutions are proposed in order to respond to the ill-posed nature of the problem \cite{ng2000algorithms,ziebart2008maximum,boularias2011relative}.
+In our experiments (see Section \ref{section: experiments}) we assume that the solely available information is provided by transitions sampled according to the dynamics of the environnement under $\pi_E$: $\{(s_i,a_i=\pi_E(s_i)),s_i')\}_{1\leq i \leq D}, D\in\mathbb{N}^*$,
 where $s_i'$ is sampled according to the distribution $P_{s_i,a_i}$.
 The reward function is obviously unknown, but this assumption means that the dynamics ($P$) is only known through transitions $(s_i, a_i, s_i')$ and that the
 policy $\pi_E$ is only known through state-action pairs $(s_i, a_i)$.\\
@@ -241,7 +241,7 @@ The first SL step in our algorithm is to train a classifer over a set
 \begin{equation}
 \label{equation:data}
 D_C=\{(s_i,a_i=\pi_E(s_i)),s'_i)\}_{1\leq i \leq D}, D\in\mathbb{N}^*,
-\end{equation} where $s'_{i}$ is sampled according to the distribution $P_{s_{i},a_{i}}$. The actions $a_i$ are seen as labels for the inputs $s_i$. We restrict ourselves to the use of score-function based classifiers for which the classification rule is of the form $\forall s \in S, \pi_C(s) = \arg\max_{a\in A} q(s,a)$. Most classifiers, from $k$-nearest neighboors to multi-class-SVMs and structured margin approaches, fall into this category. The classification rule of this broad range of classifiers can be seen as a deterministic policy. After noticing the similarity between the definition of $\pi_C$ and equation \eqref{equation:Qoptimal}, it is easy and natural to identify the score function $q:S\times A \rightarrow \mathbb{R}$ with a state-action value function with respect to a certain reward function $R^C$ for which $\pi_C$ is an optimal policy (proven in Section \ref{section: Analysis}) :
+\end{equation} where $s'_{i}$ is sampled according to the distribution $P_{s_{i},a_{i}}$. The actions $a_i$ are seen as labels for the inputs $s_i$. We restrict ourselves to the use of score-function based classifiers for which the classification rule is of the form $\forall s \in S, \pi_C(s) \in \arg\max_{a\in A} q(s,a)$. Most classifiers, from $k$-nearest neighboors to multi-class-SVMs and structured margin approaches, fall into this category. The classification rule of this broad range of classifiers can be seen as a deterministic policy. After noticing the similarity between the definition of $\pi_C$ and equation \eqref{equation:Qoptimal}, it is easy and natural to identify the score function $q:S\times A \rightarrow \mathbb{R}$ with a state-action value function with respect to a certain reward function $R^C$ for which $\pi_C$ is an optimal policy (proven in Section \ref{section: Analysis}) :
 \begin{equation}
 \forall i\in \{1,\dots,D'\}, R^C(s_{i},a_{i})=\sum_{s'\in S}p(s_{i},a_{i},s')[q(s_{i},a_{i})-\gamma q(s',\pi_C(s'))].
 \end{equation}
