Corrections dans les preuves

--- a/piot2012cascading/Biblio.bib
+++ b/piot2012cascading/Biblio.bib
@@ -7532,3 +7532,10 @@ Cit{\'e} par \cite{ng2000algorithms} :
   year={1993},
   publisher={Springer}
 }
+@book{stroock2005introduction,
+  title={An introduction to Markov processes},
+  author={Stroock, D.W.},
+  volume={230},
+  year={2005},
+  publisher={Springer Verlag}
+}
